# SOLVEiT-Code

./: CMakeLists.txt  README.md  auxiliary_functions.cpp  auxiliary_functions.h  barnes_hut_force_calculation.cpp  barnes_hut_force_calculation_rotational.cpp  barnes_hut_force_calculation_translational.cpp  cell.cpp  cell.h  constants.h  direct_force_method.cpp  direct_force_method.h  direct_force_method_rotational.cpp  direct_force_method_translational.cpp  domain_bounds_functions.cpp  domain_bounds_functions.h  fmm_cpukernel.cpp  fmm_cpukernel_rotational.cpp  fmm_cpukernel_translational.cpp  force_calculation_methods.cpp  force_calculation_methods.h  integration_schemes.cpp  integration_schemes.h  interpolation_scheme.cpp  interpolation_scheme.h  lattice_point.h  main.cpp  multipole_method_constants.cpp  multipole_method_force_calculation.cpp  multipole_method_force_calculation_rotational.cpp  multipole_method_force_calculation_translational.cpp  multipole_method_functions.cpp  multipole_method_functions.h  outlier_detection.h  particles.cpp  particles.h  pwl_interp_2d_scattered.c  pwl_interp_2d_scattered.h  r8lib.c  r8lib.h  (+11 more)
EFIELD_DATABASE/1.9/: IC_endSim.txt  info_323.txt
MATLAB_Analysis/: README.md  animate_script.m  comparison_script.m  load_L2_norm_data.m  load_barnes_hut_method_timing.m  load_direct_method_timing.m  load_energy_data.m  load_events_data.m  load_full_L2_norm_data.m  load_multipole_method_timing.m  load_particle_data.m  nBody_animate_new.m
