cmake_minimum_required(VERSION 3.0.0)
project(NBodySim VERSION 0.1.0)
include(CTest)
enable_testing()
#set(CMAKE_SYSTEM_PROCESSOR arm64)
FILE(GLOB HEADER_FILES *.h)
FILE(GLOB SOURCES *c *.cpp)
add_executable(NBodySim main.cpp ${HEADER_FILES} ${SOURCES})
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
